--- a/package.json
+++ b/package.json
@@ -13,22 +13,32 @@
     "electron": "11.0.0",
     "electron-builder": "^24.6.4"
   },
+  "config": {
+    "arch": "x64"
+  },
   "dependencies": {
     "cheerio": "^1.0.0",
     "electron-store": "^8.1.0",
     "imdb-api": "^4.4.1",
-    "node-fetch": "^2.7.0",
-    "sqlite": "^5.1.1",
-    "sqlite3": "^5.1.7"
+    "node-fetch": "^2.7.0"
   },
   "build": {
     "appId": "com.movieplayer.app",
     "mac": {
-      "target": "dmg",
       "icon": "build/icon.icns",
       "darkModeSupport": true,
-      "minimumSystemVersion": "10.12.0"
+      "minimumSystemVersion": "10.12.0",
+      "target": [
+        {
+          "target": "dmg",
+          "arch": ["x64"]
+        }
+      ]
     },
+    "directories": {
+      "output": "dist"
+    },
+    "artifactName": "${productName}-${version}-x64.${ext}",
     "dmg": {
       "title": "Movie Directory",
       "icon": "build/icon.icns",
